apps/opencode/opencode-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: opencode
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "opencode.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: opencode
          port: 4096
